# sphero_ros2

./: .gitignore  DESIGN.md  README.md  TOPIC_TRANSITIONS_UPDATE.md  test_aruco_detector.py  test_multi_sphero.py  test_sphero_commands.py  test_sphero_commands.sh  test_sphero_roll.py
src/aruco_slam/: README.md  package.xml  setup.py
src/aruco_slam/aruco_slam/: aruco_detector.py  aruco_marker.py  aruco_slam_node.py  field_mapper.py  marker_generator.py
src/battleship_game/: CMakeLists.txt  README_SWARM_AGENT.md  package.xml  requirements.txt  setup.cfg  setup.py  test_sphero_state.py
src/battleship_game/battleship_game/: game_controller_node.py  sphero_agent_node.py  sphero_controller_node.py  test_publisher.py
src/battleship_game/battleship_game/core/: board.py
src/battleship_game/battleship_game/core/sphero/: state.py
src/battleship_game/msg/: Attack.msg  AttackResult.msg  BoardState.msg  DisplayBoard.msg  NewBoard.msg  SetupBoard.msg  SpheroLED.msg  SpheroMatrix.msg  SpheroSpeed.msg  SpheroSpin.msg
src/images/aruco/: .~lock.slide.odp#  slide.odp
src/multirobot_webserver/: QUICKSTART.md  README.md  SUMMARY.md  TOPIC_NAMING.md  install_dependencies.sh  package.xml  setup.cfg  setup.py
src/multirobot_webserver/multirobot_webserver/: multirobot_webapp.py
src/multirobot_webserver/static/css/: style.css
src/multirobot_webserver/static/js/: app.js
src/multirobot_webserver/templates/: index.html
src/soccer_game_controller/: QUICKSTART.md  README.md  WORKFLOW.md  package.xml  setup.cfg  setup.py
src/soccer_game_controller/launch/: soccer_game.launch.py
src/soccer_game_controller/scripts/: start_soccer_game.sh
src/soccer_game_controller/soccer_game_controller/: soccer_game_controller_node.py
src/sphero_instance_controller/: ARCHITECTURE.md  CMakeLists.txt  README.md  package.xml
src/sphero_instance_controller/msg/: SpheroCommand.msg
src/sphero_instance_controller/sphero_instance_controller/: __init__.py  sphero_instance_device_controller_node.py  sphero_instance_statemachine_controller_node.py  sphero_instance_task_controller_node.py  sphero_instance_websocket_server.py  spherov2_collision_patch.py
src/sphero_instance_controller/sphero_instance_controller/core/: __init__.py
src/sphero_instance_controller/sphero_instance_controller/core/sphero/: __init__.py  direct_task_executor.py  matrix_patterns.py  sphero.py  state.py  statemachine.py  task.py  topic_task_executor.py
src/sphero_instance_controller/sphero_instance_controller/static/js/: app.js
src/sphero_instance_controller/sphero_instance_controller/templates/: index.html
src/sphero_package/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py  setup.py.bak
src/sphero_package/msg/: SpheroHeading.msg  SpheroLED.msg  SpheroRoll.msg  SpheroSensor.msg
src/sphero_package/sphero_package/: sphero_controller_node.py  sphero_node.py  spherov2_collision_patch.py
src/sphero_package/sphero_package/core/sphero/: matrix_patterns.py  state.py
src/sphero_statemachine/: README.md  STATE_MACHINE_GUIDE.md  VISUALIZATION_GUIDE.md  package.xml  setup.cfg  setup.py
src/sphero_statemachine/examples/: TOPIC_TRANSITIONS_README.md  collision_avoidance_README.md  collision_avoidance_state_machine.json  patrol_state_machine.json  send_config.py  simple_state_machine.json  topic_triggered_state_machine.json
src/sphero_statemachine/sphero_statemachine/: sphero_node.py  state_machine_controller.py  task_executor.py
src/sphero_task_controller/: QUICKSTART.md  README.md  package.xml  setup.cfg  setup.py
src/sphero_task_controller/examples/: example_tasks.json  task_sender.py
src/sphero_task_controller/sphero_task_controller/: task_controller_node.py
src/sphero_web_interface/: QUICKSTART.md  README.md  diagnose.sh  launch_web_interface.sh  package.xml  setup.cfg  setup.py  test_controller.sh  test_server.sh
src/sphero_web_interface/sphero_web_interface/: web_server_node.py
src/sphero_web_interface/sphero_web_interface/static/css/: style.css
src/sphero_web_interface/sphero_web_interface/static/js/: app.js
src/sphero_web_interface/sphero_web_interface/templates/: index.html  state_machine.html
