<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sphero_web_interface</name>
  <version>0.0.0</version>
  <description>Web-based interface for controlling and monitoring Sphero robots</description>
  <maintainer email="siddharth.vaghela@tufts.edu">Siddharth</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sphero_package</depend>

  <exec_depend>python3-flask</exec_depend>
  <exec_depend>python3-flask-socketio</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>ament_xmllint</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
